[gd_scene load_steps=4 format=2]

[ext_resource path="res://quit.gd" type="Script" id=1]
[ext_resource path="res://restart.gd" type="Script" id=2]
[ext_resource path="res://Return.gd" type="Script" id=3]

[node name="Lose Screen" type="Node2D"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 485.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 485.0
margin_bottom = 14.0
text = "WOW YOU REALLY LOST YOUR THIS BAD NOW YOU GOTTA USE THE CHEATS"

[node name="Return" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 485.0
margin_bottom = 38.0
text = "Resturn to main menu"
script = ExtResource( 3 )

[node name="restart" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 485.0
margin_bottom = 62.0
text = "restart"
script = ExtResource( 2 )

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 485.0
margin_bottom = 86.0
text = "press this button cause you bad "
script = ExtResource( 1 )
[connection signal="pressed" from="VBoxContainer/Return" to="VBoxContainer/Return" method="_on_Return_pressed"]
[connection signal="pressed" from="VBoxContainer/restart" to="VBoxContainer/Return" method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="VBoxContainer/Return" method="_on_quit_pressed"]
